* VDiskIn and DiskIn sets done flag (to be used by Done.kr or FreeSelfWhenDone.kr) - jli
* Demand sets done flag (to be used by Done.kr or FreeSelfWhenDone.kr) - jli
* Warn when extensions overwrites methods in main class lib, unless put in SystemOverwrites folder - jli
* New cross-platform filesystem utilities: File.copy, .mtime, .mkdir, .realpath, .type, .fileSize - jli

Bugfixes:
---------
* bugfix ugen collection wrapper methods multichannel expansion - jli
* _String_Regexp bugfixes - jli
* CoinGate.ar bugfixes - jli
* T2K bugfixes - jli
* WiiMote bugfixes - jli
* SynthDesc bugfixes - jli
* fix String-openTextFile on systems without Document support - jli

Changes up to 3.4 are listed below, grouped under each point release of SuperCollider.

SuperCollider v3.4.2, released 2011-01
======================================

Bugfixes:
---------

* 2010-06-05 fix Latch first sample output bug: if trigger > 0 initially, latch should not output 0 - jh
* 2010-09-04 fix firstArg behavior in BinaryOpUGen by a list-approved hack - jh
* 2010-10-01 fix SConstruct so that libscsynth and libsclang get SONAME entries - ds
* 2010-11-13 grainBuf: audio-rate trigger fix - tb
* 2010-11-15 generate libsclang and libscsynth with .so.1 extension (and soname) on linux - ds
* 2010-11-15 scons create symlinks from libX.so to libX.so.1 on linux, and install them - ds
* 2010-11-16 added .htm files to SConstruct as approved help file extension - mb
* 2010-11-28 compile fix for curl support - tb
* 2010-11-28 prevent asBus from breaking when called with no numChannels - jh
* 2010-12-03 grain ugens: demand ugen input fix - tb
* 2010-12-05 SystemClock and TempoClock sched and schedAbs with inf time doesn't schedule the task in the first place. backported from master - tb
* 2010-12-08 prString_FindRegexp fix: match char array was too short to hold null termination - jli
* 2010-12-11 fix classbrowser colors bugs. backported from master - tb